RESOLVED FIXED305442
Crash in WebCore::TextControlInnerTextElement::renderer; WebCore::RenderTextControlSingleLine::styleDidChange;
https://bugs.webkit.org/show_bug.cgi?id=305442
Summary Crash in WebCore::TextControlInnerTextElement::renderer; WebCore::RenderTextC...
alan
Reported 2026-01-13 19:30:51 PST
Attachments
Patch (12.80 KB, patch)
2026-01-13 19:46 PST, alan
no flags
[fast-cq]Patch (13.59 KB, patch)
2026-01-14 05:18 PST, alan
no flags
alan
Comment 1 2026-01-13 19:46:43 PST
alan
Comment 2 2026-01-14 05:18:49 PST
Created attachment 478015 [details] [fast-cq]Patch
EWS
Comment 3 2026-01-14 07:40:21 PST
Committed 305574@main (bf1992ed4abe): <https://commits.webkit.org/305574@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478015 [details].
Note You need to log in before you can comment on or make changes to this bug.