Cherry-pick bf1992ed4abe. rdar://168365146

Crash in WebCore::TextControlInnerTextElement::renderer; WebCore::RenderTextControlSingleLine::styleDidChange;
    https://bugs.webkit.org/show_bug.cgi?id=305442

    Reviewed by Simon Fraser.

    innerTextRenderer may be null_ptr when RenderTextControlSingleLine::styleDidChange is called.

    Test: fast/dynamic/input-crash-after-style-change.html

    * LayoutTests/TestExpectations:
    * LayoutTests/fast/dynamic/input-crash-after-style-change-expected.txt: Added.
    * LayoutTests/fast/dynamic/input-crash-after-style-change.html: Added.
    * Source/WebCore/rendering/RenderTextControlSingleLine.cpp:
    (WebCore::RenderTextControlSingleLine::layout):
    (WebCore::RenderTextControlSingleLine::styleDidChange):
    (WebCore::RenderTextControlSingleLine::innerTextElementHasNonVisibleOverflow const):
    (WebCore::RenderTextControlSingleLine::preferredContentLogicalWidth const):
    (WebCore::RenderTextControlSingleLine::autoscroll):
    (WebCore::RenderTextControlSingleLine::scrollWidth const):
    (WebCore::RenderTextControlSingleLine::scrollHeight const):
    (WebCore::RenderTextControlSingleLine::scrollLeft const):
    (WebCore::RenderTextControlSingleLine::scrollTop const):
    (WebCore::RenderTextControlSingleLine::setScrollPosition):
    (WebCore::RenderTextControlSingleLine::scroll):
    (WebCore::RenderTextControlSingleLine::logicalScroll):

    Canonical link: https://commits.webkit.org/305574@main

Identifier: 305413.76@safari-7624-branch