Source/WebCore/rendering/RenderTextControlSingleLine.cpp
@@ -106,13 +106,13 @@ void RenderTextControlSingleLine::layout()
     // and type=search if the text height is taller than the contentBoxHeight()
     // because of compability.
 
-    RenderTextControlInnerBlock* innerTextRenderer = innerTextElement() ? innerTextElement()->renderer() : nullptr;
+    CheckedPtr innerTextRenderer = this->innerTextRenderer();
     RenderBox* innerBlockRenderer = innerBlockElement() ? innerBlockElement()->renderBox() : nullptr;
     HTMLElement* container = containerElement();
     RenderBox* containerRenderer = container ? container->renderBox() : nullptr;
 
     // To ensure consistency between layouts, we need to reset any conditionally overridden height.
-    resetOverriddenHeight(innerTextRenderer, this);
+    resetOverriddenHeight(innerTextRenderer.get(), this);
     resetOverriddenHeight(innerBlockRenderer, this);
     resetOverriddenHeight(containerRenderer, this);
 
@@ -247,7 +247,7 @@ void RenderTextControlSingleLine::layout()
             placeholderTopLeft += toLayoutSize(innerTextRenderer->location());
         placeholderBox->setLogicalLeft(placeholderTopLeft.x());
         // Here the container box indicates the renderer that the placeholder content is aligned with (no parent and/or containing block relationship).
-        auto* containerBox = innerTextRenderer ? innerTextRenderer : innerBlockRenderer ? innerBlockRenderer : containerRenderer;
+        auto* containerBox = innerTextRenderer ? innerTextRenderer.get() : innerBlockRenderer ? innerBlockRenderer : containerRenderer;
         if (containerBox) {
             auto placeholderHeight = [&] {
                 if (auto* blockFlow = dynamicDowncast<RenderBlockFlow>(*placeholderBox)) {
@@ -324,7 +324,7 @@ void RenderTextControlSingleLine::styleDidChange(Style::Difference diff, const R
         containerRenderer->mutableStyle().setWidth(CSS::Keyword::Auto { });
     }
     if (diff == Style::DifferenceResult::Layout) {
-        if (auto innerTextRenderer = innerTextElement()->renderer())
+        if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
             innerTextRenderer->setNeedsLayout(MarkContainingBlockChain);
         if (auto* placeholder = inputElement().placeholderElement()) {
             if (placeholder->renderer())
@@ -365,8 +365,8 @@ LayoutRect RenderTextControlSingleLine::controlClipRect(const LayoutPoint& addit
 
 bool RenderTextControlSingleLine::innerTextElementHasNonVisibleOverflow() const
 {
-    if (RefPtr innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer())
-        return innerTextElement->renderer()->hasNonVisibleOverflow();
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
+        return innerTextRenderer->hasNonVisibleOverflow();
     return false;
 }
 
@@ -414,8 +414,8 @@ LayoutUnit RenderTextControlSingleLine::preferredContentLogicalWidth(float charW
     if (includesDecoration)
         result += inputElement().decorationWidth(result);
 
-    if (auto* innerRenderer = innerTextElement() ? innerTextElement()->renderer() : nullptr)
-        result += innerRenderer->endPaddingWidthForCaret();
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
+        result += innerTextRenderer->endPaddingWidthForCaret();
 
     return result;
 }
@@ -427,17 +427,16 @@ LayoutUnit RenderTextControlSingleLine::computeControlLogicalHeight(LayoutUnit l
 
 void RenderTextControlSingleLine::autoscroll(const IntPoint& position)
 {
-    RenderTextControlInnerBlock* renderer = innerTextElement()->renderer();
-    if (!renderer)
+    CheckedPtr innerTextRenderer = this->innerTextRenderer();
+    if (!innerTextRenderer)
         return;
-    RenderLayer* layer = renderer->layer();
-    if (layer)
+    if (CheckedPtr layer = innerTextRenderer->layer())
         layer->autoscroll(position);
 }
 
 int RenderTextControlSingleLine::scrollWidth() const
 {
-    if (auto* innerTextRenderer = innerTextElement() ? innerTextElement()->renderer() : nullptr) {
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer()) {
         // Adjust scrollWidth to inculde input element horizontal paddings and decoration width.
         auto adjustment = clientWidth() - innerTextRenderer->clientWidth();
         return innerTextRenderer->scrollWidth() + adjustment;
@@ -447,7 +446,7 @@ int RenderTextControlSingleLine::scrollWidth() const
 
 int RenderTextControlSingleLine::scrollHeight() const
 {
-    if (auto* innerTextRenderer = innerTextElement() ? innerTextElement()->renderer() : nullptr) {
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer()) {
         // Adjust scrollHeight to inculde input element vertical paddings and decoration height.
         auto adjustment = clientHeight() - innerTextRenderer->clientHeight();
         return innerTextRenderer->scrollHeight() + adjustment;
@@ -457,15 +456,15 @@ int RenderTextControlSingleLine::scrollHeight() const
 
 int RenderTextControlSingleLine::scrollLeft() const
 {
-    if (auto innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer())
-        return innerTextElement->renderer()->scrollLeft();
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
+        return innerTextRenderer->scrollLeft();
     return RenderBlockFlow::scrollLeft();
 }
 
 int RenderTextControlSingleLine::scrollTop() const
 {
-    if (auto innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer())
-        return innerTextElement->renderer()->scrollTop();
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
+        return innerTextRenderer->scrollTop();
     return RenderBlockFlow::scrollTop();
 }
 
@@ -483,16 +482,16 @@ void RenderTextControlSingleLine::setScrollTop(int newTop, const ScrollPositionC
 
 void RenderTextControlSingleLine::setScrollPosition(const ScrollPosition& position, const ScrollPositionChangeOptions& options)
 {
-    if (RefPtr innerTextElement = this->innerTextElement(); innerTextElement && innerTextElement->renderer())
-        innerTextElement->renderer()->setScrollPosition(position, options);
+    if (CheckedPtr innerTextRenderer = this->innerTextRenderer())
+        innerTextRenderer->setScrollPosition(position, options);
 }
 
 bool RenderTextControlSingleLine::scroll(ScrollDirection direction, ScrollGranularity granularity, unsigned stepCount, Element** stopElement, RenderBox* startBox, const IntPoint& wheelEventAbsolutePoint)
 {
-    auto* renderer = innerTextElement()->renderer();
-    if (!renderer)
+    CheckedPtr innerTextRenderer = this->innerTextRenderer();
+    if (!innerTextRenderer)
         return false;
-    auto* scrollableArea = renderer->layer() ? renderer->layer()->scrollableArea() : nullptr;
+    CheckedPtr scrollableArea = innerTextRenderer->layer() ? innerTextRenderer->layer()->scrollableArea() : nullptr;
     if (scrollableArea && scrollableArea->scroll(direction, granularity, stepCount))
         return true;
     return RenderBlockFlow::scroll(direction, granularity, stepCount, stopElement, startBox, wheelEventAbsolutePoint);
@@ -500,8 +499,11 @@ bool RenderTextControlSingleLine::scroll(ScrollDirection direction, ScrollGranul
 
 bool RenderTextControlSingleLine::logicalScroll(ScrollLogicalDirection direction, ScrollGranularity granularity, unsigned stepCount, Element** stopElement)
 {
-    auto* layer = innerTextElement()->renderer()->layer();
-    auto* scrollableArea = layer ? layer->scrollableArea() : nullptr;
+    CheckedPtr innerTextRenderer = this->innerTextRenderer();
+    if (!innerTextRenderer)
+        return false;
+    CheckedPtr layer = innerTextRenderer->layer();
+    CheckedPtr scrollableArea = layer ? layer->scrollableArea() : nullptr;
     if (scrollableArea && scrollableArea->scroll(logicalToPhysical(direction, writingMode().isHorizontal(), writingMode().isBlockFlipped()), granularity, stepCount))
         return true;
     return RenderBlockFlow::logicalScroll(direction, granularity, stepCount, stopElement);
